# SimUI

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
sim_ui/: __init__.py  simdata.py  ui.py
svelte-ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
svelte-ui/scripts/: generate.py
svelte-ui/src/: App.svelte  app.css  frame.ts  global.d.ts  main.ts  simdata.ts
svelte-ui/src/lib/: AeroMesh.svelte  Arrow.svelte  AxisGizmo.svelte  ColorBar.svelte  ForceChart.svelte  HydroForces.svelte  RigLine.svelte  Sail.svelte  SailForces.svelte  Scene.svelte  SubmergedMesh.svelte  Timeline.svelte  WireframeMesh.svelte  colormap.ts  frame.svelte.ts
